crates/hird-check/tests/snapshots/inference__match_unions_scrutinee_and_arms.snap
---
source: crates/hird-check/tests/inference.rs
expression: "check_str(\"effect Log\\n\\\n         effect Fork\\n\\\n         fn f(s: Int -> Bool ! {Log}, a: Int -> Int ! {Fork}) -> Int ! {Log, Fork} =\\n\\\n           match s(0) { True -> a(0), False -> 0, }\")"
---
f : (Int → Bool ! {Log}) → (Int → Int ! {Fork}) → Int ! {Fork, Log}
