crates/hird-check/tests/snapshots/inference__multiple_row_variables_rejected.snap
---
source: crates/hird-check/tests/inference.rs
assertion_line: 594
expression: "check_str(r\"fn f(x: Int) -> Int ! {r, s} = x\")"
---
error[C0029] 26..27: an effect row may name at most one row variable
