crates/hird-check/tests/snapshots/inference__nested_patterns.snap
---
source: crates/hird-check/tests/inference.rs
expression: "check_str(\"type List<a> = Cons(a, List<a>) | Nil\\n\\\n         type Option<a> = Some(a) | None\\n\\\n         fn first_or_zero(opt: Option<List<Int>>) -> Int = match opt {\\n\\\n           Some(Cons(x, _)) -> x,\\n\\\n           Some(Nil) -> 0,\\n\\\n           None -> 0,\\n\\\n         }\")"
---
Cons : ∀a. a → List<a> → List<a>
Nil : ∀a. List<a>
None : ∀a. Option<a>
Some : ∀a. a → Option<a>
first_or_zero : Option<List<Int>> → Int
